--- a/css/bigbrain.css
+++ b/css/bigbrain.css
@@ -148,16 +148,20 @@ section p {font-size: 17px;
 		  line-height: 140%;}
 .right-side {grid-column: 3 / 4;
              background-color: rgba(231,150,166,.5);
-	     padding: 50px 0;
+	     padding: 50px 25px;
 	     text-align: center;
 	     display: flex;
 	     flex-direction: column;
 	     align-items: center;}
 .right-side img {border: 5px solid #ce2d4d;
                  margin-bottom: 15px;
-				 width: 80%;
-				 height: auto;
-				 background-color: white;}				
+				 width: 200px;
+				 max-height: 200px;
+				 background-color: white;
+				 flex: 1;}
+
+.right-side img:last-of-type {margin-bottom: 0;}
+				 
 footer {grid-column: 1 / 4;
         background-color: rgba(181,213,225,.8);
 		text-align: center;
@@ -186,8 +190,12 @@ main h2 {font-size: 1.4rem;}
 section h2 {font-size: 1.1rem;}
 .right-side {flex-direction :row;
 	     justify-content: space-around;
-	     padding: 25px 0;}
-.right-side img {height: 225px; width: 225px;}
+	     padding: 25px;}
+.right-side img {height: 225px;
+                 max-width: 225px;
+				 margin-bottom: 0;
+				 margin-inline: 1rem;}
+.right-side img:last-of-type {margin-right: none;}
 footer {font-size: .9rem;}
 }
 
@@ -225,7 +233,9 @@ article time {font-size: 0.8rem;
           font-size: .95rem;
 		  line-height: 150%;}
 .right-side {padding: 15px 0;}
-.right-side img {height: 120px; width: 120px;}
+.right-side img {height: 120px;
+                 max-width: 120px;
+				 margin-inline: 10px;}
 footer {font-size: .8rem;}
 }
 
