--- a/css/bigbrain.css
+++ b/css/bigbrain.css
@@ -233,9 +233,9 @@ article time {font-size: 0.8rem;
           font-size: .95rem;
 		  line-height: 150%;}
 .right-side {padding: 15px 0;}
-.right-side img {height: 110px;
-                 max-width: 110px;
-				 margin-inline: 10px;}
+.right-side img {height: 120px;
+                 max-width: 120px;
+				 margin-inline: 0;}
 footer {font-size: .8rem;}
 }
 
